--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 
 <div id="SideNav1" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index2.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="index1.html">About Me</a>
   <a href="hobbies.html">Hobbies</a>
   <a href="contacts.html">Contacts</a>
