--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<a href="index1.html"><img src="images/logo.png"></a>
 				<div class="topnav">
 					<ul>
-						<li><a href="index2.html">HOME</a></li>
+						<li><a href="index.html">HOME</a></li>
 						<li><a href="index1.html">ABOUT ME</a></li>
 						<li><a href="hobbies.html">HOBBIES</a></li>
 						<li><a href="contacts.html">CONTACTS</a></li>
