--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
 	<body>
         <div id="SideNav1" class="sidenav">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-			<a href="index2.html">Home</a>
+			<a href="index.html">Home</a>
 			<a href="index1.html">About Me</a>
 			<a href="hobbies.html">Hobbies</a>
 			<a href="contacts.html">Contacts</a>
